##Change Log- Add your changes to this so we know what each others changed.

5/12/15 - 16:53 Removed(commented out) the default action in controller. This was calling function default action in event nothing was sent
via the action  in index(+ other pages) This was trying to connect to the users table . We dont want this.

5/12/15 12:03 Changed login form to be Class Form-Horizontal. Made 2 Buttons called Register and forgot password.
Register links to register page.

6/12/15 12:39 Removed the old register button. Changed the register page which says "Talk about yourself",
to include a password instead.

6/12/15 18:30 - Login success function added in controller folder.
                -called in controller.
6/12/15 18:35 - user is able to enter register succesfully.
6/12/15 20:00 -md5 working on passwords