@@ -1,0 +1,15 @@
+
+
+<!-- Javascript -->
+<script src="styles/assets/js/jquery-1.11.1.min.js"></script>
+<script src="styles/assets/bootstrap/js/bootstrap.min.js"></script>
+<script src="styles/assets/js/jquery.backstretch.min.js"></script>
+<script src="styles/assets/js/scripts.js"></script>
+
+<!--[if lt IE 10]>
+<script src="styles/assets/js/placeholder.js"></script>
+<![endif]-->
+
+</body>
+
+</html>
