@@ -1,47 +1,4 @@
-<?php
-/**
- * Created by PhpStorm.
- * User: Eoin's
- * Date: 04/12/2015
- * Time: 15:47
- */
-?>
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>PC Builder</title>
-
-    <!-- CSS -->
-    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:400,100,300,500">
-    <link rel="stylesheet" href="styles/assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="styles/assets/font-awesome/css/font-awesome.min.css">
-    <link rel="stylesheet" href="styles/assets/css/form-elements.css">
-    <link rel="stylesheet" href="styles/assets/css/style.css">
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
-    <!-- Favicon and touch icons -->
-    <link rel="shortcut icon" href="../styles/assets/ico/favicon.png">
-    <link rel="apple-touch-icon-precomposed" sizes="144x144"
-          href="../styles/assets/ico/apple-touch-icon-144-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="114x114"
-          href="../styles/assets/ico/apple-touch-icon-114-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="../styles/assets/ico/apple-touch-icon-72-precomposed.png">
-    <link rel="apple-touch-icon-precomposed" href="../styles/assets/ico/apple-touch-icon-57-precomposed.png">
-
-</head>
-
-<body>
+<?php include_once("html_headers.php"); ?>
 
 <!-- Top menu -->
 <nav class="navbar navbar-inverse navbar-no-bg" role="navigation">
@@ -116,17 +73,6 @@
 </div>
 
 </div>
-
-<!-- Javascript -->
-<script src="styles/assets/js/jquery-1.11.1.min.js"></script>
-<script src="styles/assets/bootstrap/js/bootstrap.min.js"></script>
-<script src="styles/assets/js/jquery.backstretch.min.js"></script>
-<script src="styles/assets/js/scripts.js"></script>
-
-<!--[if lt IE 10]>
-<script src="styles/assets/js/placeholder.js"></script>
-<![endif]-->
-
-</body>
-
-</html>
+<?php
+include_once("html_footers.php");
+?>
