@@ -13,3 +13,5 @@ to include a password instead.
                 -called in controller.
 6/12/15 18:35 - user is able to enter register succesfully.
 6/12/15 20:00 -md5 working on passwords
+6/12/15 20:10 - added html headers and html footer file and included them into the existing files
+                - From now on , on new pages just include the headers instead of re-creating the code.
